# coord_convert_gui

./: Coord_test.csv  MB WH Coordinates.csv  appCoordConv.py  coord_test_results.csv  coordsys.ini  custom.css  globe.jfif  mainwindow.ui  options.py  options_dialog.ui  pyproject.toml  requirements.txt
src/main/python/: main.py  options.py
src/main/resources/base/: coordsys.ini  crs.db  custom.css  globe.jfif  mainwindow.ui
